revise ProductServiceImpl.java using stream to convert product entity to product dto